--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,10 +3,26 @@
 
 <!-- Announce the hero's name and show both id and name in a details layout -->
 <!-- Format with the UppercasePipe -->
-<h2>{{ hero.name | uppercase }} Details</h2>
-<div>
-  <label>name:
-    <!-- [(ngModel)] is Angular's two-way data binding syntax. Here it binds the hero.name property to the HTML textbox so that data can flow in both directions: from the hero.name property to the textbox, and from the textbox back to the hero.name. -->
-    <input [(ngModel)]="hero.name" placeholder="name">
-  </label>
+<!-- Hide empty details with *ngIf. The component should only display the selected hero details if the selectedHero exists. When selectedHero is undefined, the ngIf removes the hero detail from the DOM. There are no selectedHero bindings to worry about. When the user picks a hero, selectedHero has a value and ngIf puts the hero detail into the DOM. -->
+<div *ngIf="selectedHero">
+  <h2>{{ selectedHero.name | uppercase }} Details</h2>
+  <div><span>id: </span>{{selectedHero.id}}</div>
+  <div>
+    <label>name:
+      <!-- [(ngModel)] is Angular's two-way data binding syntax. Here it binds the hero.name property to the HTML textbox so that data can flow in both directions: from the hero.name property to the textbox, and from the textbox back to the hero.name. -->
+      <input [(ngModel)]="selectedHero.name" placeholder="name">
+    </label>
+  </div>
 </div>
+
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <!-- The *ngFor is Angular's repeater directive. It repeats the host element for each element in a list -->
+  <!-- The parentheses around click tell Angular to listen for the <li> element's click event. When the user clicks in the <li>, Angular executes the onSelect(hero) expression -->
+  <!-- The Angular class binding makes it easy to add and remove a CSS class conditionally. When the current row hero is the same as the selectedHero, Angular adds the selected CSS class. When the two heroes are different, Angular removes the class. -->
+  <li *ngFor="let hero of heroes" 
+      (click)="onSelect(hero)" 
+      [class.selected]="hero === selectedHero">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
