--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,16 +4,21 @@
 <!-- Announce the hero's name and show both id and name in a details layout -->
 <!-- Format with the UppercasePipe -->
 <!-- Hide empty details with *ngIf. The component should only display the selected hero details if the selectedHero exists. When selectedHero is undefined, the ngIf removes the hero detail from the DOM. There are no selectedHero bindings to worry about. When the user picks a hero, selectedHero has a value and ngIf puts the hero detail into the DOM. -->
-<div *ngIf="selectedHero">
+<!-- <div *ngIf="selectedHero">
   <h2>{{ selectedHero.name | uppercase }} Details</h2>
   <div><span>id: </span>{{selectedHero.id}}</div>
   <div>
-    <label>name:
+    <label>name: -->
       <!-- [(ngModel)] is Angular's two-way data binding syntax. Here it binds the hero.name property to the HTML textbox so that data can flow in both directions: from the hero.name property to the textbox, and from the textbox back to the hero.name. -->
-      <input [(ngModel)]="selectedHero.name" placeholder="name">
+      <!-- <input [(ngModel)]="selectedHero.name" placeholder="name">
     </label>
   </div>
-</div>
+</div> -->
+
+
+<!-- The HeroesComponent is still a master/detail view. It used to display the hero details on its own, before you cut that portion of the template. Now it will delegate to the HeroDetailComponent. The two components will have a parent/child relationship. The parent HeroesComponent will control the child HeroDetailComponent by sending it a new hero to display whenever the user selects a hero from the list. -->
+<!-- [hero]="selectedHero" is an Angular property binding. It's a one way data binding from the selectedHero property of the HeroesComponent to the hero property of the target element, which maps to the hero property of the HeroDetailComponent. Now when the user clicks a hero in the list, the selectedHero changes. When the selectedHero changes, the property binding updates hero and the HeroDetailComponent displays the new hero. -->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
 <h2>My Heroes</h2>
 <ul class="heroes">
