--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 
 <!-- Display the HeroesComponent -->
 <app-heroes></app-heroes>
+<!-- Display the MessagesComponent -->
+<app-messages></app-messages>
