--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,5 +8,7 @@
       <input [(ngModel)]="hero.name" placeholder="name"/>
     </label>
   </div>
+  <!-- Add a go back button to the bottom of the component template and bind it to the component's goBack() method -->
+  <button (click)="goBack()">go back</button>
 
 </div>
