--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -10,5 +10,6 @@
   </div>
   <!-- Add a go back button to the bottom of the component template and bind it to the component's goBack() method -->
   <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
 
 </div>
