--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -20,8 +20,8 @@
 <!-- [hero]="selectedHero" is an Angular property binding. It's a one way data binding from the selectedHero property of the HeroesComponent to the hero property of the target element, which maps to the hero property of the HeroDetailComponent. Now when the user clicks a hero in the list, the selectedHero changes. When the selectedHero changes, the property binding updates hero and the HeroDetailComponent displays the new hero. -->
 <!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
 
-<h2>My Heroes</h2>
-<ul class="heroes">
+<!-- <h2>My Heroes</h2>
+<ul class="heroes"> -->
   <!-- The *ngFor is Angular's repeater directive. It repeats the host element for each element in a list -->
   <!-- The parentheses around click tell Angular to listen for the <li> element's click event. When the user clicks in the <li>, Angular executes the onSelect(hero) expression -->
   <!-- The Angular class binding makes it easy to add and remove a CSS class conditionally. When the current row hero is the same as the selectedHero, Angular adds the selected CSS class. When the two heroes are different, Angular removes the class. -->
@@ -33,9 +33,32 @@
 </ul> -->
 
 <!-- Strip the <li> back to just its *ngFor, wrap the badge and name in an anchor element (<a>), and add a routerLink attribute to the anchor that is the same as in the dashboard template. -->
-<li *ngFor="let hero of heroes">
+<!-- <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
+  </li>
+</ul> -->
+
+
+<h2>My Heroes</h2>
+
+<div>
+  <label>Hero name:
+    <input #heroName />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(heroName.value); heroName.value=''">
+    add
+  </button>
+</div>
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
+    <button class="delete" title="delete hero"
+    (click)="delete(hero)">x</button>
   </li>
 </ul>
